--- a/Symfony/app/Resources/views/base.html.twig
+++ b/Symfony/app/Resources/views/base.html.twig
@@ -57,25 +57,10 @@
         </div>
 
         <div class="element size_2">
-            <div class="bg">
-                <a href="#">
-                    <div class="sub_bg">
-                        News
-                    </div>
-                </a>
-                <div class="sub_element">
-                    <a href="#">
-                        <div class="sub_bg">Important</div>
-                    </a>
-                </div>
-                <div class="sub_element">
-                    <a href="#">
-                        <div class="sub_bg">Tout</div>
-                    </a>
-                </div>
-            </div>
+            <a href="#">
+                <div class="bg"></div>
+            </a>
         </div>
-
         <div class="element">
             <a href="#">
                 <div class="bg">Contact</div>
