--- a/Symfony/app/Resources/views/base.html.twig
+++ b/Symfony/app/Resources/views/base.html.twig
@@ -56,9 +56,9 @@
             </a>
         </div>
 
-        <div class="element size_2">
+        <div class="element">
             <a href="#">
-                <div class="bg"></div>
+                <div class="bg">News</div>
             </a>
         </div>
         <div class="element">
