--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/newsadmin.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/newsadmin.html.twig
@@ -20,4 +20,5 @@
 
 {% block js %}
     <script src="{{ asset('bundles/minedochome/js/admin.js') }}" type="text/javascript"></script>
+    {{ tinymce_init() }}
 {% endblock %}
