--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -46,6 +46,14 @@
     {% else %}
         <div class="warning">Veuillez vous connecter pour accéder au contenu intégral de cette page.</div>
     {% endif %}
+        <h3>News</h3>
+        {% for new in news %}
+            <h2>{{ new.name }}</h2>
+            {% if new.picture is defined %}
+                {{ new.picure }}
+            {% endif %}
+            {{ new.content }}
+        {% endfor %}
         <h3>Infos</h3>
         <div id="infos" class="fleft">
             <h4>Adresses serveur:</h4><span class="underline">Serveur survival:</span> docserver.fr <br/><span class="underline">Serveur créatif:</span> docserver.fr:4321<br/><br/>
