--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -50,7 +50,7 @@
         {% for new in news %}
             <h2>{{ new.name }}</h2>
             {% if new.picture is defined %}
-                {{ new.picure }}
+                {{ new.picture }}
             {% endif %}
             {{ new.content }}
         {% endfor %}
