--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -54,7 +54,7 @@
                     {% if new.picture is defined %}
                         {{ new.picture.file }}
                     {% endif %}
-                    {{ new.content }}
+                    {{ new.content | raw }}
                 </div>
             {% endfor %}
         </div>
