--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/main.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/main.css
@@ -1,6 +1,7 @@
 @import url("menu.css");
 @import url("form.css");
 @import url("buttons.css");
+@import url("news.css");
 @import url("notices.css");
 @import url("chat.css");
 
