--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -50,11 +50,13 @@
         <div id="news">
             {% for new in news %}
                 <div class="news">
-                    <h2>{{ new.name }}</h2>
-                    {% if new.picture is defined %}
-                        <img src="upload/{{ new.picture.name ~ "/" ~ new.picture.file }}"/>
-                    {% endif %}
-                    {{ new.content | raw }}
+                    <h2 class="news_title">{{ new.name }}</h2>
+                    <div class="news_content">
+                        {% if new.picture is defined %}
+                            <img src="upload/{{ new.picture.name ~ "/" ~ new.picture.file }}"/>
+                        {% endif %}
+                        {{ new.content | raw }}
+                    </div>
                 </div>
             {% endfor %}
         </div>
