--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/menu.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/menu.css
@@ -2,7 +2,7 @@
     width: 100%;
     text-align:center;
     float: left;
-    left: -15px;
+    left: -1%;
     position: absolute;
     background-color: rgba(0, 28, 78, 0.56);
 }
