--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/news.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/news.css
@@ -19,6 +19,10 @@
     float: left;
 }
 
+.news .picture img {
+    border-radius: 5px;
+}
+
 .news_content {
     float: left;
     background-color: rgba(255, 255, 255, 0.5);
