--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -54,7 +54,7 @@
                     <div class="clear"></div>
                     <div class="news_content">
                         {% if new.picture is defined %}
-                            <img src="upload/{{ new.picture.name ~ "/" ~ new.picture.file }}"/>
+                            <div class="picture"><img src="upload/{{ new.picture.name ~ "/" ~ new.picture.file }}"/></div>
                         {% endif %}
                         {{ new.content | raw }}
                     </div>
