--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -63,8 +63,9 @@
         </div>
         <h3>Infos</h3>
         <div id="infos" class="fleft">
+            <h4>Comment se connecter:</h4>Ajouter l'adresse (cf ci-dessous) du serveur.<br/>Creer un compte EN jeu avec la commande /register [password] [password].<br/>Se connecter en faisant /login [password].<br/><br/>
             <h4>Adresses serveur:</h4><span class="underline">Serveur survival:</span> docserver.fr <br/><span class="underline">Serveur créatif:</span> docserver.fr:4321<br/><br/>
-            Le site vous permet une interactivité avec les autres joueurs ainsi que le serveur sans être pour autant en jeu, des privilèges sont accordés aux membres les plus fidèles ainsi qu'aux donateurs grâce à la boutique dans laquelle vous pouvez acheter des ressources<br/><br/>
+            Le site vous permet une interactivité avec les autres joueurs ainsi que le serveur sans être pour autant en jeu, des privilèges sont accordés aux membres les plus fidèles ainsi qu'aux donateurs grâce à la boutique dans laquelle vous pouvez acheter des ressources.<br/><br/>
             <h4>Les dons:</h4> Chaque don vous rapporte 100$ (par tranche de 5€) ainsi que le rang de donateur (pour un don minimum de 5€) ce qui vous donne droit a certains privilèges, entre autre l'accès a un bouton utilisable quotidiennement vous rapportant 5$.
             <br/><br/>
             <h4>Le parrainage:</h4> En invitant vos amis a rejoindre le serveur ainsi qu'à s'inscrire sur le site, vous recevrez 10$ pour chaque filleul actif, 50$ pour chaque don effectué par l'un de vos filleuls.
