--- a/Symfony/app/Resources/views/base.html.twig
+++ b/Symfony/app/Resources/views/base.html.twig
@@ -57,7 +57,7 @@
         </div>
 
         <div class="element">
-            <a href="#">
+            <a href="{{ path('news') }}">
                 <div class="bg">News</div>
             </a>
         </div>
