--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/menu.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/menu.css
@@ -4,7 +4,7 @@
     float: left;
     left: -1%;
     position: absolute;
-    background-color: rgba(0, 28, 78, 0.56);
+    background-color: rgb(0, 28, 78);
 }
 
 #menu a {
