--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/tinymce.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/tinymce.css
@@ -50,7 +50,6 @@ input {
 }
 
 body {
-    background-color: #92dfff;
     overflow: auto;
     color: black;
     border-radius: 10px;
@@ -59,7 +58,7 @@ body {
     margin-top: 0;
     height: 100%;
     position: relative;
-    background-color: rgba(76, 153, 206, 0.7);
+    background-color: transparent;
     border-right: 1px solid rgba(255, 255, 255, 0.5);
     border-left: 1px solid rgba(255, 255, 255, 0.5);
     margin-right: auto;
