--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -31,14 +31,16 @@
         {% if level > 1 %}
             <h3 class="title_donator">Privilèges donateur</h3>
             <div id="donator" class="fleft">
-                <a class="cm_btn" href="{{ path('send_command', {"name" : "undefined", "type" : 2}) }}" id="earnmoney"><input type="button" class="button_blue {% if earnmoney %}inactive{% endif %}" value="Gagner 5$"/></a>
-            <span id="earnmoneytime">
-                {% if earnmoney %}
-                    <span class="notice">
-                        Le bouton sera utilisable a partir de {{ earnmoneytime }}
+                <div class="command_div">
+                    <a class="cm_btn" href="{{ path('send_command', {"name" : "undefined", "type" : 2}) }}" id="earnmoney"><input type="button" class="button_blue {% if earnmoney %}inactive{% endif %}" value="Gagner 5$"/></a>
+                    <span id="earnmoneytime">
+                        {% if earnmoney %}
+                            <span class="notice">
+                                Le bouton sera utilisable a partir de {{ earnmoneytime }}
+                            </span>
+                        {% endif %}
                     </span>
-                {% endif %}
-            </span>
+                </div>
             </div>
         {% endif %}
     {% elseif app.session.get('logged') == 1 %}
