--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -27,6 +27,13 @@
                 </div>
                 <br/>
             {% endfor %}
+
+            <div class="command_div">
+                <a class="cm_btn" href="{{ path('send_util_command', {"name" : "tp"} }}"><input type="button" class="button_blue {% if money < 20 %}inactive{% endif %}" value="Se téléporter au spawn (20$)"/></a>
+                <span class="notice"></span>
+            </div>
+            <br/>
+
         </div>
         {% if level > 1 %}
             <h3 class="title_donator">Privilèges donateur</h3>
