--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -29,8 +29,8 @@
             {% endfor %}
 
             <div class="command_div">
-                <a class="cm_btn" href="{{ path('send_util_command', {"name" : "tp"}) }}"><input type="button" class="button_blue {% if money < 20 %}inactive{% endif %}" value="Se téléporter au spawn (20$)"/></a>
-                <span class="notice"></span>
+                <a class="command_util cm_btn" href="{{ path('send_util_command', {"name" : "tp"}) }}"><input type="button" class="button_blue {% if money < 20 %}inactive{% endif %}" value="Se téléporter au spawn (20$)"/></a>
+                <span></span>
             </div>
             <br/>
 
