--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -25,14 +25,14 @@
                         {% endif %}
                     </span>
                 </div>
-                <br/>
+                <div class="clear"></div>
             {% endfor %}
 
             <div class="command_div">
                 <a class="command_util cm_btn" href="{{ path('send_util_command', {"name" : "tp"}) }}"><input type="button" class="button_blue {% if money < 20 %}inactive{% endif %}" value="Se téléporter au spawn (20$)"/></a>
                 <span></span>
             </div>
-            <br/>
+           <div class="clear"></div>
 
         </div>
         {% if level > 1 %}
