--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/account.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/account.html.twig
@@ -8,7 +8,7 @@
     <form method="post" novalidate="novalidate" {{ form_enctype(form) }}>
         <div id="account">
             <div>{{ form_label(form.password, 'Changer mot de passe:') }}{{ form_errors(form.password) }}{{ form_widget(form.password) }}</div>
-        </div>
+        </div><br/>
         <input type="submit" class="button_blue" value="Valider" />
     </form>
 {% endblock %}
