--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/account.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/account.html.twig
@@ -6,9 +6,9 @@
 
 {% block body %}
     <form method="post" novalidate="novalidate" {{ form_enctype(form) }}>
-        <div id="account">
+        <div id="register">
             <div>{{ form_label(form.password, 'Changer mot de passe:') }}{{ form_errors(form.password) }}{{ form_widget(form.password) }}</div>
-        </div><br/>
+        </div>
         <input type="submit" class="button_blue" value="Valider" />
     </form>
 {% endblock %}
