--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/chat.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/chat.css
@@ -26,6 +26,10 @@
     height: 60%;
 }
 
+.div_chat img {
+    float: none !important;
+}
+
 #content_chat {
     width: 100%;
     height: 100%;
@@ -35,6 +39,7 @@
 
 #content_chat * {
     float: left;
+    vertical-align: top;
     font-size: 11px;
 }
 
