--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/panel.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/panel.html.twig
@@ -22,7 +22,7 @@
         <a href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : 'desc', "type" : 'money', "search" : app.request.attributes.get('search')}) }}" class="button_blue">$ ▼</a>
 
         <input id="search_panel" type="search" placeholder="Search"/>
-         <a id="search_url" href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : app.request.attributes.get('orderby'), "type" : app.request.attributes.get('type'), "search" : 'nc') }}" class="button_blue">Search</a>
+         <a id="search_url" href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : app.request.attributes.get('orderby'), "type" : app.request.attributes.get('type'), "search" : 'nc'}) }}" class="button_blue">Search</a>
 
         <form action="{{ path('saveitem') }}" method="post" {{ form_enctype(form_item) }}>
             {{ form_widget(form_item) }}
