--- a/Symfony/app/Resources/views/base.html.twig
+++ b/Symfony/app/Resources/views/base.html.twig
@@ -5,7 +5,8 @@
     <title>Doc's server - {% block title %}{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
-    <link rel="stylesheet" href="{{ asset('bundles/minedochome/css/main.css') }}" type="text/css" media="all" />
+    <link rel="stylesheet" href="{{ asset('bundles/minedochome/css/main.css') }}" type="text/css" media="all"/>
+    <link rel="stylesheet" href="{{ asset('bundles/minedochome/js/fancybox/jquery.fancybox-1.3.4.css') }}" type="text/css" media="all"/>
 </head>
 <body>
 <div id="body">
@@ -112,6 +113,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
 {% if app.session.get('logged') == 1 %}
     <script src="{{ asset('bundles/minedochome/js/chat.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/minedochome/js/fancybox/jquery.fancybox-1.3.4.pack.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/minedochome/js/fancybox/jquery.easing-1.4.pack.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/minedochome/js/fancybox/jquery.mousewheel-3.0.4.pack.js') }}" type="text/javascript"></script>
 {% endif %}
 <script src="{{ asset('bundles/minedochome/js/main.js') }}" type="text/javascript"></script>
 {% block js %}{% endblock %}
