--- a/Symfony/src/MineDoc/HomeBundle/Resources/public/css/main.css
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/public/css/main.css
@@ -79,7 +79,7 @@ body {
 
 #body_content {
     overflow: auto;
-    color: black;
+    color: #333;
     padding: 10px;
     width: 78%;
     background-color: rgba(255, 255, 255, 0.5);
