--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Default/index.html.twig
@@ -85,7 +85,7 @@
         {% block js %}
             {% if app.session.get('alert_mail') == 1 %}
                 <script type="text/javascript">alert("Merci de vérifier vos mail ainsi que votre boite SPAM !!! (pour hotmail/yahoo etc...)")</script>
-                {% app.session.set('alert_mail', 0) %}
+                {% set app.session.get('alert_mail') = 0 %}
             {% endif %}
             <script src="{{ asset('bundles/minedochome/js/sendcommand.js') }}" type="text/javascript"></script>
         {% endblock %}
