--- a/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/panel.html.twig
+++ b/Symfony/src/MineDoc/HomeBundle/Resources/views/Admin/panel.html.twig
@@ -22,6 +22,7 @@
         <a href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : 'money', "type" : 'desc', "search" : app.request.attributes.get('search'), "more" : app.request.attributes.get('more')}) }}" class="button_blue">$ ▼</a>
         <a href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : 'money', "type" : 'desc', "search" : app.request.attributes.get('search'), "more" : "act"}) }}" class="button_blue">Mail ok</a>
         <a href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : 'money', "type" : 'desc', "search" : app.request.attributes.get('search'), "more" : "nact"}) }}" class="button_blue">Mail not ok</a>
+        <a href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : 'money', "type" : 'desc', "search" : app.request.attributes.get('search'), "more" : "nc"}) }}" class="button_blue">Others</a>
 
         <input id="search_panel" type="search" placeholder="Search"/>
         <a id="search_url" href="{{ path('panel', {'pages' : app.request.attributes.get('pages'), "orderby" : app.request.attributes.get('orderby'), "type" : app.request.attributes.get('type'), "search" : 'nc', "more" : app.request.attributes.get('more')}) }}" class="button_blue">Search</a>
